Bug 1807847 - Ensure the document is active when ObserveForLastRememberedSize is called r=emilio

For this particular crash, I was not able to reproduce it locally.
However, based on the testcase, it looks like what happened was the
window is transitioning into a new document, and the synchronous XHR
causes the event loop to execute ObserveForLastRememberedSize. I think
it's safe to not creating the observer since we are inactivating
the document.

Differential Revision: https://phabricator.services.mozilla.com/D166192